styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  --scrollbarBG: #ffffff00;
  --thumbBG: #b8b8b8;
}
body::-webkit-scrollbar {
  width: 5px;
}
body {
  scrollbar-width: thin;
  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
}
body::-webkit-scrollbar-track {
  background: var(--scrollbarBG);
}
body::-webkit-scrollbar-thumb {
  background-color: var(--thumbBG);
}

::selection {
  background: rgba(45, 170, 219, 0.3);
}

.lucide {
  width: 1.25rem;
  /* height: 1.25rem; */
}

.wrapper {
  min-height: 100vh;
  display: flex;
  flex-wrap: nowrap;
  align-items: stretch;
  justify-content: flex-start;
  flex-direction: column;
}

.sticky-nav {
  position: sticky;
  z-index: 10;
  top: -1px;
  backdrop-filter: blur(8px);
  transition: all 0.5s cubic-bezier(0.4, 0, 0, 1);
  border-bottom-color: transparent;
}

.remove-sticky {
  position: unset;
}

.sticky-nav-full {
  @apply border-b border-gray-200 border-opacity-50 dark:border-gray-600 dark:border-opacity-50;
}

.header-name {
  display: none;
  opacity: 0;
  overflow: hidden;
}

nav {
  flex-wrap: wrap;
  line-height: 1.5em;
}

.article-tags::-webkit-scrollbar {
  width: 0 !important;
}

.tag-container ul::-webkit-scrollbar {
  width: 0 !important;
}

.tag-container ul {
  -ms-overflow-style: none;
  overflow: -moz-scrollbars-none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -khtml-user-select: none;
  user-select: none;
}

@media (min-width: 768px) {
  .sticky-nav-full {
    @apply max-w-full border-b border-gray-200 border-opacity-50 dark:border-gray-700 dark:border-opacity-50;
  }
  .header-name {
    display: block;
    opacity: 0;
    transition: all 0.5s cubic-bezier(0.4, 0, 0, 1);
  }
  .sticky-nav-full .header-name {
    opacity: 1;
    @apply text-gray-600 dark:text-gray-300;
  }
}

@supports not (backdrop-filter: none) {
  .sticky-nav {
    backdrop-filter: none;
    @apply bg-day bg-opacity-90 dark:bg-night dark:bg-opacity-90;
  }
}

.border-anime {
  position: relative;
  font-size: 18px;
}

.border-anime:before {
  content: '';
  position: absolute;
  left: 0;
  bottom: 0;
  width: 0;
  border-bottom: solid 2px #000;
  animation: border_anim 3s linear forwards;
}

@keyframes border_anim {
  0% {
    width: 0%;
  }
  100% {
    width: 100%;
  }
}

.notion-ignore-padding-x > main {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

